# GenAI_Tutorial

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
arize/notebook/: agent-eval.ipynb  agent.ipynb  arize-intro.ipynb
tavily/notebook/: tavily-intro.ipynb
