[project]
name = "genai-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix-otel>=0.13.0",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.10",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "openinference-instrumentation-pydantic-ai>=0.1.4",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pydantic-ai-slim[google,tavily]>=1.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "tavily-python>=0.7.11",
]
