[project]
name = "genai-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arize-phoenix>=11.37.0",
    "arize-phoenix-client>=1.19.1",
    "arize-phoenix-otel>=0.13.0",
    "google-genai>=1.33.0",
    "jupyterlab>=4.4.7",
    "langchain>=0.3.27",
    "langchain-community>=0.3.29",
    "langchain-google-genai>=2.1.10",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "openinference-instrumentation>=0.1.38",
    "openinference-instrumentation-google-genai>=0.1.5",
    "openinference-instrumentation-langchain>=0.1.51",
    "openinference-instrumentation-pydantic-ai>=0.1.4",
    "opentelemetry-api>=1.36.0",
    "opentelemetry-exporter-otlp>=1.36.0",
    "opentelemetry-sdk>=1.36.0",
    "pandas>=2.3.2",
    "pydantic-ai-slim[google,tavily]>=1.0.0",
    "python-dotenv>=1.1.1",
    "rich>=14.1.0",
    "scipy>=1.16.2",
    "sympy>=1.14.0",
    "tavily-python>=0.7.11",
]
